Add username/password authentication
